--- a/styles/general.css
+++ b/styles/general.css
@@ -16,3 +16,24 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
+
+body::-webkit-scrollbar-thumb {
+    background: #141c3a
+}
+
+a {
+    text-decoration: none
+}
+
+a:hover {
+    text-decoration: underline
+}
+
+img {
+    max-width: 100%;
+    display: block;
+}
+
+li {
+    list-style: none;
+}
